--- a/specifyEofError/libp2p/muxers/yamux/yamux.html
+++ b/specifyEofError/libp2p/muxers/yamux/yamux.html
@@ -229,8 +229,7 @@ window.addEventListener("DOMContentLoaded", main2);
   closedRemotely: Future[void]
   closedLocally: bool
   receivedData: AsyncEvent
-  returnedEof: bool
-  connDown: ref LPStreamConnDownError">YamuxChannel</a></li>
+  returnedEof: bool">YamuxChannel</a></li>
   <li><a class="reference" href="#YamuxError"
     title="YamuxError = object of CatchableError">YamuxError</a></li>
 
@@ -340,9 +339,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L361"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L360"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L361" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L360" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -364,7 +363,6 @@ class="link-seesrc" target="_blank">Source</a>
   <span class="Identifier">closedLocally</span><span class="Other">:</span> <span class="Identifier">bool</span>
   <span class="Identifier">receivedData</span><span class="Other">:</span> <span class="Identifier">AsyncEvent</span>
   <span class="Identifier">returnedEof</span><span class="Other">:</span> <span class="Identifier">bool</span>
-  <span class="Identifier">connDown</span><span class="Other">:</span> <span class="Keyword">ref</span> <a href="../../stream/lpstream.html#LPStreamConnDownError"><span class="Identifier">LPStreamConnDownError</span></a>
 </pre></dt>
 <dd>
 
@@ -417,9 +415,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L524"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L520"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L524" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L520" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -430,9 +428,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L353"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L352"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L353" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L352" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -443,9 +441,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L277"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L276"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L277" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L276" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -461,9 +459,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L408"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L407"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L408" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L407" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -474,9 +472,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L190"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L189"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L190" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L189" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -488,9 +486,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L432"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L431"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L432" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L431" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -502,9 +500,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L514"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L510"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L514" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L510" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -515,9 +513,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L240"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L239"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L240" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L239" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -528,9 +526,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L337"
+href="https://github.com/status-im/nim-libp2p/tree/specifyEofError/libp2p/muxers/yamux/yamux.nim#L336"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L337" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L336" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -549,7 +547,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-02 13:28:41 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-09-05 11:47:36 UTC</small>
       </div>
     </div>
   </div>
